--- a/AstralAssault.csproj
+++ b/AstralAssault.csproj
@@ -21,6 +21,7 @@
     <ItemGroup>
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.2" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Content\Shaders" />
