--- a/AstralAssault.csproj
+++ b/AstralAssault.csproj
@@ -20,6 +20,19 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="MonoGame.Extended" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Animations" Version="3.7.0" />
+        <PackageReference Include="MonoGame.Extended.Collisions" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Entities" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Graphics" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Gui" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Gui.SFPlus" Version="1.0.0-prerelease-20200614195543" />
+        <PackageReference Include="MonoGame.Extended.Input" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.NuclexGui" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Particles" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.SceneGraphs" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Tiled" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Tweening" Version="3.8.0" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
     </ItemGroup>
