--- a/AstralAssault.csproj
+++ b/AstralAssault.csproj
@@ -35,6 +35,7 @@
         <PackageReference Include="MonoGame.Extended.Tweening" Version="3.8.0" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+        <PackageReference Include="SpriteFontPlus" Version="0.8.0.37" />
     </ItemGroup>
     <ItemGroup>
         <Folder Include="Content\Shaders" />
