--- a/TheGameOfDoomHmmm.csproj
+++ b/TheGameOfDoomHmmm.csproj
@@ -12,34 +12,48 @@
         <ApplicationIcon>Icon.ico</ApplicationIcon>
     </PropertyGroup>
     <ItemGroup>
-        <None Remove="Icon.ico"/>
-        <None Remove="Icon.bmp"/>
+        <None Remove="Icon.ico" />
+        <None Remove="Icon.bmp" />
+        <None Update="mgTestYaaaz\Content\Content.mgcb">
+          <Link>MonoGameWindowsDesktopApplication1\Content\Content.mgcb</Link>
+        </None>
+        <None Update="mgTestYaaaz\Icon.ico">
+          <Link>MonoGameWindowsDesktopApplication1\Icon.ico</Link>
+        </None>
     </ItemGroup>
     <ItemGroup>
-        <EmbeddedResource Include="Icon.ico"/>
-        <EmbeddedResource Include="Icon.bmp"/>
+        <EmbeddedResource Include="Icon.ico" />
+        <EmbeddedResource Include="Icon.bmp" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="MonoGame.Extended" Version="3.8.0"/>
-        <PackageReference Include="MonoGame.Extended.Animations" Version="3.7.0"/>
-        <PackageReference Include="MonoGame.Extended.Collisions" Version="3.8.0"/>
-        <PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="3.8.0"/>
-        <PackageReference Include="MonoGame.Extended.Entities" Version="3.8.0"/>
-        <PackageReference Include="MonoGame.Extended.Graphics" Version="3.8.0"/>
-        <PackageReference Include="MonoGame.Extended.Gui" Version="3.8.0"/>
-        <PackageReference Include="MonoGame.Extended.Gui.SFPlus" Version="1.0.0-prerelease-20200614195543"/>
-        <PackageReference Include="MonoGame.Extended.Input" Version="3.8.0"/>
-        <PackageReference Include="MonoGame.Extended.NuclexGui" Version="3.8.0"/>
-        <PackageReference Include="MonoGame.Extended.Particles" Version="3.8.0"/>
-        <PackageReference Include="MonoGame.Extended.SceneGraphs" Version="3.8.0"/>
-        <PackageReference Include="MonoGame.Extended.Tiled" Version="3.8.0"/>
-        <PackageReference Include="MonoGame.Extended.Tweening" Version="3.8.0"/>
-        <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303"/>
-        <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303"/>
-        <PackageReference Include="SpriteFontPlus" Version="0.8.0.37"/>
+        <PackageReference Include="MonoGame.Extended" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Animations" Version="3.7.0" />
+        <PackageReference Include="MonoGame.Extended.Collisions" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Entities" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Graphics" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Gui" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Gui.SFPlus" Version="1.0.0-prerelease-20200614195543" />
+        <PackageReference Include="MonoGame.Extended.Input" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.NuclexGui" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Particles" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.SceneGraphs" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Tiled" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Extended.Tweening" Version="3.8.0" />
+        <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+        <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+        <PackageReference Include="SpriteFontPlus" Version="0.8.0.37" />
+    </ItemGroup>
+    <ItemGroup>
+      <Compile Update="mgTestYaaaz\Game1.cs">
+        <Link>MonoGameWindowsDesktopApplication1\Game1.cs</Link>
+      </Compile>
+      <Compile Update="mgTestYaaaz\Program.cs">
+        <Link>MonoGameWindowsDesktopApplication1\Program.cs</Link>
+      </Compile>
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
-        <Message Text="Restoring dotnet tools" Importance="High"/>
-        <Exec Command="dotnet tool restore"/>
+        <Message Text="Restoring dotnet tools" Importance="High" />
+        <Exec Command="dotnet tool restore" />
     </Target>
 </Project>
